[tool.poetry]
name = "gunicorn-pushgateway-workers"
version = "0.1.0"
description = ""
authors = ["Bulat Kurbanov <kurbanovbul@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gunicorn_pushgateway_workers" }
]

[tool.poetry.dependencies]
python = "^3.9"
gunicorn = "^20.1.0"
prometheus-client = "^0.15.0"
pydantic = "^1.10.4"
uvicorn = {extras = ["standard"], version = "^0.20.0", optional = true}

[tool.poetry.extras]
uvicorn = ["uvicorn"]

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
fix = true
line-length = 119
src = ["gunicorn_pushgateway_workers"]
select = ["B", "C", "E", "F", "W", "B9", "I001"]

[tool.ruff.mccabe]
max-complexity = 15

[tool.ruff.isort]
force-sort-within-sections = true
